--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <nav>
+        <nav class="bg-white">
             <div class="container pt-20 pb-20">
                 <div class="d-flex justify-content-between">
                     <div class="">
@@ -81,6 +81,27 @@
                     <div class="">
                         <div class="b-rgba-grey pl-15 pr-15 pt-5 pb-5">
                             <i class="fa fa-bars fa-lg"></i>
+                        </div>
+
+                        <div class="d-none">
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">Home</a>
+                            </div>
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">About</a>
+                            </div>
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">Services</a>
+                            </div>
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">Tour Pages</a>
+                            </div>
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">Pages▼</a>
+                            </div>
+                            <div class="">
+                                <a href="" class="text-dnone text-black-hover">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,7 +132,292 @@
     </header>
 
     <main>
+        <!-- *form -->
+        <section>
+            <div class="container pr-15 pl-15">
+                <div class="bg-white mt-48 box-form">
+                    <form action="">
+                        <div class="p-30">
+                            <div class="mb-20">
+                                <input type="text" placeholder="Destination"
+                                    class="b-rgba-grey fs-16 w-100 pt-10 pb-10 pr-15 pl-15">
+                            </div>
+                            <div class="mb-20">
+                                <input type="text" placeholder="Depart Date"
+                                    class="b-rgba-grey fs-16 w-100 pt-10 pb-10 pr-15 pl-15">
+                            </div>
+                            <div class="mb-20">
+                                <input type="text" placeholder="Retun date"
+                                    class="b-rgba-grey fs-16 w-100 pt-10 pb-10 pr-15 pl-15">
+                            </div>
+                            <div class="mb-20">
+                                <input type="text" placeholder="Duration↨"
+                                    class="b-rgba-grey fs-16 w-100 pt-10 pb-10 pr-15 pl-15">
+                            </div>
 
+                            <div class="mb-20">
+                                <button class="text-white bg-green-limon b-green p-10 fs-16 w-100">Subtim</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <!-- *about -->
+        <section>
+            <div class="mt-200">
+                <div class="container">
+                    <div class="pr-10 pl-10">
+                        <div class="h-500p">
+                            <img src="./asset/images/about.jpg" alt="" class="w-100 objert-fit h-100">
+                        </div>
+
+                        <div class=" bg-white pt-25 pb-25 pl-10 pr-10 mt-50">
+                            <div class="pr-20 pl-20 mb-10">
+                                <h5 class="ttransfor-upper letter-spancing-5 font-weight-300 text-green-limon fs-15">
+                                    about us
+                                </h5>
+                            </div>
+
+                            <div class="pr-20 pl-20">
+                                <h2 class="text-black fs-27 lh-35">We Provide Best Tour Packages In Your Budget</h2>
+                            </div>
+
+                            <div class="pr-20 pl-20">
+                                <p class="font-weight-200">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam
+                                    dolore sed et. Sit rebum
+                                    labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut.
+                                    Erat duo eos et erat sed diam duo.</p>
+                            </div>
+
+                            <div class="d-flex">
+                                <div class="p-20">
+                                    <img src="./asset/images/about-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="p-20">
+                                    <img src="./asset/images/about-2.jpg" alt="" class="w-100">
+                                </div>
+                            </div>
+
+                            <div class="pr-20 pl-20">
+                                <button class="text-white bg-green-limon b-green p-10 fs-16">
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="mt-50">
+                            <div class="d-flex mb-25">
+                                <div class="">
+                                    <div class="bg-green-limon h-100p w-100p">
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <i class="fa fa-money-check-alt text-white fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="ml-15">
+                                    <div class="">
+                                        <h5 class="text-black fs-20 font-weight-300">Competitive Pricing</h5>
+                                    </div>
+                                    <div class="">
+                                        <p class="font-weight-200">Magna sit magna dolor duo dolor labore rebum amet
+                                            elitr est diam sea</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="d-flex mb-25">
+                                <div class="">
+                                    <div class="bg-green-limon h-100p w-100p">
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <i class="fa fa-award text-white fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="ml-15">
+                                    <div class="">
+                                        <h5 class="text-black fs-20 font-weight-300">Best Services</h5>
+                                    </div>
+                                    <div class="">
+                                        <p class="font-weight-200">Magna sit magna dolor duo dolor labore rebum amet
+                                            elitr est diam sea</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="d-flex mb-25">
+                                <div class="">
+                                    <div class="bg-green-limon h-100p w-100p">
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <i class="fa fa-globe text-white fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="ml-15">
+                                    <div class="mb-5">
+                                        <h5 class="text-black fs-20 font-weight-300 lh-25">Worldwide Coverage</h5>
+                                    </div>
+                                    <div class="">
+                                        <p class="font-weight-200">Magna sit magna dolor duo dolor labore rebum amet
+                                            elitr est diam sea</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- *img destination -->
+        <section>
+            <div class="mt-200">
+                <div class="container">
+                    <div class="pr-10 pl-10">
+                        <div class="text-center">
+                            <div class="mb-10">
+                                <h5 class="ttransfor-upper letter-spancing-5 font-weight-300 text-green-limon fs-15 ">
+                                    destination</h5>
+                            </div>
+
+                            <div class="mb-45">
+                                <h2 class="text-black fs-27 lh-35">Explore Top Destination</h2>
+                            </div>
+                        </div>
+
+                        <div class="">
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-1.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">United
+                                                States
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-2.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">United
+                                                Kingdom
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-3.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">Australia
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-4.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">India
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-5.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">South
+                                                Africa
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="positions-relative overflow-hidden destination mb-25">
+
+                                <img src="./asset/images/destination-6.jpg" alt="" class="w-100 destination-items">
+
+                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+
+                                    <div class="cape h-100">
+
+                                        <div class="d-flex justify-content-center ali-items-center h-100">
+
+                                            <a href=""
+                                                class="text-dnone text-white font-weight-300 fs-20 text-center">Indonesia
+                                                <div><small class="font-weight-200 fs-16">100
+                                                        Cities</small></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
