arreglos de los items
arreglo de los items.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
     <!-- *_____________________________________header________________________________ -->
     <header>
-        <div class="container d-none">
-            <div class="d-flex justify-content-between pt-10 pb-10">
+        <div class="container d-none d-lg-block">
+            <div class="d-flex justify-content-between pt-20 pl-10 pr-10">
                 <div class="d-flex">
                     <div class="d-flex mr-15">
                         <div class="">
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="ml-7">
-                            <p>mail@domain.com</p>
+                            <p class="font-weight-300">mail@domain.com</p>
                         </div>
                     </div>
                     <div class="bright-grey h-15p mt-5"></div>
@@ -46,7 +46,7 @@
                         </div>
 
                         <div class="ml-7">
-                            <p>+012 356 9846</p>
+                            <p class="font-weight-300">+012 356 9846</p>
                         </div>
                     </div>
                 </div>
@@ -71,19 +71,20 @@
             </div>
         </div>
 
-        <nav class="bg-white" id="inicio">
+        <nav class="bg-white ttraslateY-lg-30 w-lg-95 m-lg-auto" id="inicio">
             <div class="container pt-20 pb-20">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between pl-lg-25 pr-lg-25 ali-items-lg-baseline">
                     <div class="">
-                        <h2 class="text-black ttransfor-upper fs-27">travel<span class="text-green-limon">er</span></h2>
+                        <h2 class="text-black ttransfor-upper fs-27 fs-lg-36">travel<span
+                                class="text-green-limon">er</span></h2>
                     </div>
 
                     <div class="">
-                        <div class="b-rgba-grey pl-15 pr-15 pt-5 pb-5">
+                        <div class="b-rgba-grey pl-15 pr-15 pt-5 pb-5 d-lg-none">
                             <i class="fa fa-bars fa-lg"></i>
                         </div>
 
-                        <div class="d-none">
+                        <div class="d-none d-lg-flex">
                             <div class="">
                                 <a href="" class="text-dnone text-black-hover">Home</a>
                             </div>
@@ -303,124 +304,137 @@
 
                         <div class="d-md-flex flex-md-wrap">
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pr-md-10">
+                            <div class="w-md-50 pr-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25">
 
-                                <img src="./asset/images/destination-1.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-1.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">United
-                                                States
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">United
+                                                    States
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pl-md-10">
+                            <div class="w-md-50 pl-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25">
 
-                                <img src="./asset/images/destination-2.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-2.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">United
-                                                Kingdom
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">United
+                                                    Kingdom
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pr-md-10">
+                            <div class="w-md-50 pr-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25">
 
-                                <img src="./asset/images/destination-3.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-3.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">Australia
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">Australia
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pl-md-10">
+                            <div class="w-md-50 pl-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25">
 
-                                <img src="./asset/images/destination-4.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-4.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">India
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">India
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pr-md-10 mb-md-0">
+                            <div class="w-md-50 pr-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25  mb-md-0">
 
-                                <img src="./asset/images/destination-5.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-5.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">South
-                                                Africa
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">South
+                                                    Africa
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="positions-relative overflow-hidden destination mb-25 w-md-50 pl-md-10 mb-md-0">
+                            <div class="w-md-50 pl-md-10">
+                                <div class="positions-relative overflow-hidden destination mb-25   mb-md-0">
 
-                                <img src="./asset/images/destination-6.jpg" alt="" class="w-100 destination-items">
+                                    <img src="./asset/images/destination-6.jpg" alt="" class="w-100 destination-items">
 
-                                <div class="positions-absolute p-35 h-100 w-100 top-0">
+                                    <div class="positions-absolute p-35 h-100 w-100 top-0">
 
-                                    <div class="cape h-100">
+                                        <div class="cape h-100">
 
-                                        <div class="d-flex justify-content-center ali-items-center h-100">
+                                            <div class="d-flex justify-content-center ali-items-center h-100">
 
-                                            <a href=""
-                                                class="text-dnone text-white font-weight-300 fs-20 text-center">Indonesia
-                                                <div><small class="font-weight-200 fs-16">100
-                                                        Cities</small></div>
-                                            </a>
+                                                <a href=""
+                                                    class="text-dnone text-white font-weight-300 fs-20 text-center">South
+                                                    Africa
+                                                    <div><small class="font-weight-200 fs-16">100
+                                                            Cities</small></div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1123,6 +1137,12 @@
                                 <div class="bg-white mb-30">
                                     <div class="">
                                         <img src="./asset/images/team-1.jpg" alt="" class="w-100">
+
+                                        <div class="bg-secundary">
+
+                                            .
+
+                                        </div>
                                     </div>
 
                                     <div class="text-center pt-25 pb-25">
